--- a/styles/price-table.scss
+++ b/styles/price-table.scss
@@ -1,7 +1,6 @@
 .price-table {
   background: $main-bg-color;
   width: 1440px;
-  margin: 0 auto;
   height: 1000px;
   display: flex;
   justify-content: center;
@@ -84,7 +83,7 @@
   }
 
   &__description {
-    padding: 0px 26px;
+    padding: 0px 27px;
     margin-bottom: 40px;
     font-weight: 300;
     font-size: 15px;
